force-app/main/default/objects/Property__c/fields/Property_Owner__c.field-meta.xml
<CustomField>
    <fullName>Property_Owner__c</fullName>
    <label>Property Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>