force-app/main/default/objects/Property__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Gated Society</fullName>
            </value>
            <value>
                <fullName>Independent House</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>